@@ -1,3 +1,7 @@
+
+2018-02-26 Franz Holzinger <franz@ttproducts.de>
+    * move getSimpleTemplate from CreateView into Template
+
 2018-02-21 Franz Holzinger <franz@ttproducts.de>
     * extract methods render for class AfterSaveView and getKeyAfterSave for Template out of the CreateView methods afterSave and getKeyAfterSave
 
